--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -265,13 +265,19 @@ aside#sidebar {
 
 
 @media only screen and (max-width:480px){
+    .container main .image_container {
+        justify-content: center;
+    }
     .container main .media-item a { 
         img { width:410px;}
     }
 } 
 
 @media only screen and (max-width:1024px){
+        .container main .image_container {
+        justify-content: center;
+    }
     .container main .media-item a { 
-        img { width:900px;}
+        img { width:800px;}
     }
 } 
