--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -278,6 +278,6 @@ aside#sidebar {
         justify-content: center;
     }
     .container main .media-item a { 
-        img { width:800px;}
+        img { width:100%; max-width:800px;}
     }
 } 
