--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>PinBoard</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/old_styles.css') }}">
+    <title>Pinz</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="apple-touch-icon" sizes="180x180" href="static/favicons/apple-touch-icon.png">
