--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -203,13 +203,13 @@ aside#sidebar {
 
 .media-item.video { 
     .caption { 
-        max-width:600px;
+        width:600px;
     }
 }
 
 .media-item.image { 
     .caption { 
-        max-width:300px;
+        width:300px;
     }
 }
 
@@ -249,6 +249,9 @@ aside#sidebar {
         }
     }
     .rating { 
+        display:flex;
+        justify-content:flex-end;
+        align-items:center;
         margin:10px 0;
         .star { 
             font-size: 18px;
@@ -287,20 +290,55 @@ aside#sidebar {
 }
 
 
-@media only screen and (max-width:480px){
+
+
+@media screen and (max-width:1024px){
+        .container main .image_container {
+        justify-content: center;
+    }
+
+    
+    .media-item.video { 
+        .caption { 
+            width:100%;
+            max-width:920px;
+            .actions button { 
+                font-size:24px;
+            }
+        }
+    }
+
+    .media-item.image { 
+        margin-bottom:40px;
+        .caption { 
+            max-width:920px;
+            width:100%;
+            .actions button { 
+                font-size:24px;
+            }
+        }
+    }
+
+    .container main .media-item a { 
+        img { width:100%; max-width:920px;}
+    }
+} 
+
+@media screen and (max-width:480px){
     .container main .image_container {
         justify-content: center;
     }
     .container main .media-item a { 
         img { width:410px;}
     }
-} 
 
-@media only screen and (max-width:1024px){
-        .container main .image_container {
-        justify-content: center;
-    }
-    .container main .media-item a { 
-        img { width:100%; max-width:800px;}
+    .media-item.image { 
+        .caption { 
+            max-width:420px;
+            width:100%;
+            .actions button { 
+                font-size:16px;
+            }
+        }
     }
 } 
